[modify]rename path url patch fcm
